feat: add Android kapt multi module support
Signed-off-by: Paulo Cesar Meurer <paulo.meurer@zup.com.br>

--- a/android/moduleA/build.gradle
+++ b/android/moduleA/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation project(Dependencies.Modules.core)
     kapt project(Dependencies.Modules.processor)
 
+    api project(':moduleB')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -66,7 +68,7 @@ dependencies {
 
 kapt {
     arguments {
-        arg("beagle.moduleName", "moduleA")
+//        arg("beagle.moduleName", "moduleA")
         arg("beagle.hasInstance", "false")
     }
 }
