--- a/android/moduleC/build.gradle
+++ b/android/moduleC/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 
 kapt {
     arguments {
-        arg("beagle.moduleName", "ModuleC")
+//        arg("beagle.moduleName", "ModuleC")
         arg("beagle.hasInstance", "false")
     }
 }
