feat: add Android kapt multi module support
Signed-off-by: Paulo Cesar Meurer <paulo.meurer@zup.com.br>

--- a/android/moduleA/build.gradle
+++ b/android/moduleA/build.gradle
@@ -68,7 +68,7 @@ dependencies {
 
 kapt {
     arguments {
-//        arg("beagle.moduleName", "moduleA")
-        arg("beagle.hasInstance", "false")
+        arg("beagle.moduleName", "moduleA")
+//        arg("beagle.hasInstance", "false")
     }
 }
