--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,6 +51,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+//        mavenLocal()
     }
 
     // temporary solution to all libraries updated to the last version of kotlin
