--- a/android/moduleC/build.gradle
+++ b/android/moduleC/build.gradle
@@ -66,7 +66,9 @@ dependencies {
 
 kapt {
     arguments {
-//        arg("beagle.moduleName", "ModuleC")
-        arg("beagle.hasInstance", "false")
+        arg("beagle.moduleName", "ModuleC")
+//        arg("beagle.hasInstance", "false")
     }
 }
+
+apply from: new File('./../../maven-publish.gradle')
