--- a/flutter/beagle/pubspec.yaml
+++ b/flutter/beagle/pubspec.yaml
@@ -3,6 +3,7 @@ description: Beagle is an open source framework for cross-platform development u
 version: 1.0.0
 author: Zup
 homepage: https://usebeagle.io/
+publish_to: none
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -15,6 +16,11 @@ dependencies:
   get_it: ^7.1.3
   shared_preferences: ^2.0.6
   url_launcher: ^6.0.6
+  yoga_engine:
+    path: ../../../yoga/flutter
+#    git:
+#      url: git://github.com/ZupIT/yoga.git
+#      path: flutter
 
 dev_dependencies:
   flutter_test:
