--- a/flutter/beagle/pubspec.yaml
+++ b/flutter/beagle/pubspec.yaml
@@ -3,6 +3,7 @@ description: Beagle is an open source framework for cross-platform development u
 version: 1.0.0
 author: Zup
 homepage: https://usebeagle.io/
+publish_to: none
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -14,6 +15,10 @@ dependencies:
   flutter_js: ^0.5.0+0
   get_it: ^7.1.3
   url_launcher: ^6.0.6
+  yoga_engine:
+    git:
+      url: git://github.com/ZupIT/yoga.git
+      path: flutter
 
 dev_dependencies:
   flutter_test:
