feat: add Android kapt multi module support
Signed-off-by: Paulo Cesar Meurer <paulo.meurer@zup.com.br>

--- a/android/moduleA/build.gradle
+++ b/android/moduleA/build.gradle
@@ -54,6 +54,7 @@ android {
 dependencies {
     implementation project(Dependencies.Modules.core)
     kapt project(Dependencies.Modules.processor)
+    implementation Dependencies.GeneralLibraries.kotlinCoroutines
 
     api project(':moduleB')
 
@@ -69,6 +70,6 @@ dependencies {
 kapt {
     arguments {
         arg("beagle.moduleName", "moduleA")
-//        arg("beagle.hasInstance", "false")
+        arg("beagle.generateSetup", "false")
     }
 }
