--- a/android/moduleC/build.gradle
+++ b/android/moduleC/build.gradle
@@ -54,6 +54,7 @@ android {
 dependencies {
     implementation project(Dependencies.Modules.core)
     kapt project(Dependencies.Modules.processor)
+    implementation Dependencies.GeneralLibraries.kotlinCoroutines
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
@@ -67,7 +68,7 @@ dependencies {
 kapt {
     arguments {
         arg("beagle.moduleName", "ModuleC")
-//        arg("beagle.hasInstance", "false")
+        arg("beagle.generateSetup", "false")
     }
 }
 
