feat: add Android kapt multi module support
Signed-off-by: Paulo Cesar Meurer <paulo.meurer@zup.com.br>

--- a/android/sample/build.gradle
+++ b/android/sample/build.gradle
@@ -65,7 +65,9 @@ android {
 
 dependencies {
     implementation project(':moduleA')
-//    implementation project(':moduleB')
+    implementation project(':moduleB')
+//    implementation project(':moduleC')
+
     implementation Dependencies.AndroidxLibraries.appcompat
     implementation Dependencies.AndroidxLibraries.coreKtx
 
