--- a/android/moduleA/build.gradle
+++ b/android/moduleA/build.gradle
@@ -56,9 +56,9 @@ dependencies {
     kapt project(Dependencies.Modules.processor)
     implementation Dependencies.GeneralLibraries.kotlinCoroutines
 
-    api project(':moduleB')
+    api project(':moduleC')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.10"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
