--- a/android/moduleB/build.gradle
+++ b/android/moduleB/build.gradle
@@ -56,10 +56,10 @@ dependencies {
     kapt project(Dependencies.Modules.processor)
     implementation Dependencies.GeneralLibraries.kotlinCoroutines
 
-    api project(':moduleC')
+//    api project(':moduleC')
 //    api "br.com.zup.beagle:modulec:1.0.0-automated"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.10"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
