--- a/flutter/beagle/pubspec.yaml
+++ b/flutter/beagle/pubspec.yaml
@@ -1,6 +1,6 @@
 name: beagle
 description: Beagle is an open source framework for cross-platform development using the concept of Server-Driven UI.
-version: 0.9.0
+version: 0.9.0-alpha
 homepage: https://usebeagle.io/
 
 environment:
