--- a/android/moduleC/build.gradle
+++ b/android/moduleC/build.gradle
@@ -68,7 +68,7 @@ dependencies {
 kapt {
     arguments {
         arg("beagle.moduleName", "ModuleC")
-        arg("beagle.generateSetup", "false")
+//        arg("beagle.generateSetupClasses", "false")
     }
 }
 
