--- a/android/moduleB/build.gradle
+++ b/android/moduleB/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     kapt project(Dependencies.Modules.processor)
     implementation Dependencies.GeneralLibraries.kotlinCoroutines
 
-//    api project(':moduleC')
+    api project(':moduleC')
 //    api "br.com.zup.beagle:modulec:1.0.0-automated"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.10"
@@ -71,6 +71,6 @@ dependencies {
 kapt {
     arguments {
         arg("beagle.moduleName", "ModuleB")
-        arg("beagle.generateSetup", "false")
+//        arg("beagle.generateSetupClasses", "false")
     }
 }
