feat: add Android kapt multi module support
Signed-off-by: Paulo Cesar Meurer <paulo.meurer@zup.com.br>

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,6 +48,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        mavenLocal()
     }
 
     // temporary solution to all libraries updated to the last version of kotlin
