--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,6 +48,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        mavenLocal() // TODO: remove after draft tests
     }
 
     // temporary solution to all libraries updated to the last version of kotlin
