--- a/tests/bff-server/gradle.properties
+++ b/tests/bff-server/gradle.properties
@@ -45,4 +45,4 @@ POM_URL=https\://github.com/ZupIT/beagle
 
 GROUP=br.com.zup.beagle
 POM_ARTIFACT_ID=""
-VERSION_NAME=1.0.0-local
+VERSION_NAME=1.5.0
