--- a/flutter/beagle_components/pubspec.yaml
+++ b/flutter/beagle_components/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 
 dependencies:
   beagle:
-    path: '../beagle' # change this to ^0.1.9 when beagle is published
+    path: '../beagle' # change this to ^0.9.0-alpha when beagle is published
   flutter:
     sdk: flutter
   webview_flutter: ^2.0.8
@@ -22,10 +22,6 @@ dev_dependencies:
   lints: ^1.0.1
   mockito: ^5.0.10
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
   uses-material-design: true
   assets:
