--- a/flutter/beagle_components/pubspec.yaml
+++ b/flutter/beagle_components/pubspec.yaml
@@ -1,17 +1,15 @@
 name: beagle_components
 description: Beagle Components is a set of tools and components to be used with the Beagle package
-  wich is an open source framework for cross-platform development using the concept of Server-Driven UI.
+  that is an open source framework for cross-platform development using the concept of Server-Driven UI.
 version: 0.9.0-alpha
 homepage: https://usebeagle.io/
-publish_to: none # remove this when beagle is published
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
   flutter: ">=1.22.5"
 
 dependencies:
-  beagle:
-    path: '../beagle' # change this to ^0.9.0-alpha when beagle is published
+  beagle: ^0.9.0-alpha
   flutter:
     sdk: flutter
   webview_flutter: ^2.0.8
