--- a/flutter/sample/pubspec.yaml
+++ b/flutter/sample/pubspec.yaml
@@ -1,36 +1,16 @@
 name: sample
 description: A new Flutter application.
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0
+publish_to: 'none'
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
   flutter: ">=1.22.5"
 
 dependencies:
-  beagle:
-    path: ../beagle
-  beagle_components:
-    path: ../beagle_components
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  beagle: ^0.9.0-alpha
+  beagle_components: ^0.9.0-alpha
   cupertino_icons: ^1.0.3
-
   flutter:
     sdk: flutter
 
@@ -39,15 +19,7 @@ dev_dependencies:
     sdk: flutter
   lints: ^1.0.1
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
   assets:
     - images/
