--- a/tests/bff-server/gradle.properties
+++ b/tests/bff-server/gradle.properties
@@ -22,27 +22,5 @@ org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.caching= true
 
-# Increase timeout when pushing to Sonatype (otherwise we get timeouts)s
+# Increase timeout when pushing to Sonatype (otherwise we get timeouts)
 systemProp.org.gradle.internal.http.socketTimeout=120000
-
-# Publication
-POM_NAME=beagle
-POM_DESCRIPTION=A framework to help implement Server-Driven UI in your apps natively.
-POM_INCEPTION_YEAR=2020
-
-POM_DEVELOPER_ID=zupit
-POM_DEVELOPER_NAME=Zup IT
-POM_DEVELOPER_URL=beagle@zup.com.br
-
-POM_LICENCE_DIST=repo
-POM_LICENCE_NAME=Apache License 2.0
-POM_LICENCE_URL=http\://www.apache.org/licenses/LICENSE-2.0.txt
-
-POM_SCM_CONNECTION=scm\:git\:git\://github.com/ZupIT/beagle.git
-POM_SCM_DEV_CONNECTION=scm\:git\:ssh\://git@github.com\:ZupIT/beagle.git
-POM_SCM_URL=https\://github.com/ZupIT/beagle
-POM_URL=https\://github.com/ZupIT/beagle
-
-GROUP=br.com.zup.beagle
-POM_ARTIFACT_ID=""
-VERSION_NAME=1.0.0-local
