feat: add Android kapt multi module support
Signed-off-by: Paulo Cesar Meurer <paulo.meurer@zup.com.br>

--- a/android/processor/build.gradle
+++ b/android/processor/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     testImplementation Dependencies.TestLibraries.kotlinCompileTesting
     testImplementation Dependencies.TestLibraries.junitApi
     testImplementation Dependencies.TestLibraries.junitEngine
+    testImplementation Dependencies.TestLibraries.mockk
 }
 
 apply from: new File('./../../maven-publish.gradle')
