:wrench: Rename branch master to main on github actions
Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

--- a/.github/workflows/automated_tests_appium_mobile.yml
+++ b/.github/workflows/automated_tests_appium_mobile.yml
@@ -17,11 +17,11 @@
 name: Beagle Appium tests trigger
 on:
   workflow_dispatch:
-  # invoked by merges to master (pushing a branch to master)
+  # invoked by merges to main (pushing a branch to main)
   # src: https://github.community/t/trigger-workflow-only-on-pull-request-merge/17359/2
   push:
     branches:
-      - master
+      - main
     paths:
       - 'android/**'
       - 'common/**'
