--- a/.github/workflows/backend-pr.yml
+++ b/.github/workflows/backend-pr.yml
@@ -3,7 +3,7 @@ name: Beagle Backend Pull Request
 on:
     push:
         branches:
-            - master
+            - main
         paths:
             - 'backend/**'
             - 'common/**'
