--- a/.github/workflows/pr_danger.yml
+++ b/.github/workflows/pr_danger.yml
@@ -4,7 +4,7 @@ on:
    pull_request:
        types: [edited, synchronize, reopened, opened]
        branches:
-       - master
+       - main
 jobs:
     danger-pr:
         name: Danger PR
