--- a/.github/workflows/android-pr.yml
+++ b/.github/workflows/android-pr.yml
@@ -3,7 +3,7 @@ name: Beagle Android Pull Request
 on:
     push:
         branches:
-            - master
+            - main
         paths:
             - 'android/**'
             - 'common/**'
