--- a/.github/workflows/release-kdocs.yml
+++ b/.github/workflows/release-kdocs.yml
@@ -2,7 +2,7 @@ name: Beagle kdocs publish
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     tags-ignore:
       - "*-iOS"
 jobs:
@@ -59,5 +59,5 @@ jobs:
         run: aws s3 sync --acl public-read --follow-symlinks fastlane/kdocs/public s3://${{ env.BEAGLE_DOCS_AWS_AWS_DOCS_S3_BUCKET }}/ --delete
 
       - name: S3 BETA upload
-        if: ${{ github.ref == 'refs/heads/master' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         run: aws s3 sync --acl public-read --follow-symlinks fastlane/kdocs/public s3://${{ env.BEAGLE_DOCS_AWS_AWS_DOCS_BETA_BUCKET }}/ --delete
