--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
             - uses: actions/checkout@v2.1.0
               with:
                   fetch-depth: '0'
-                  ref: 'master'
+                  ref: 'main'
             - name: Read secrets from AWS Secrets Manager into environment variables
               uses: abhilash1in/aws-secrets-manager-action@v1.0.1
               with:
