--- a/.github/workflows/sync_spring_sample.yml
+++ b/.github/workflows/sync_spring_sample.yml
@@ -3,7 +3,7 @@ name: Sync to Spring BFF sample
 on:
     push:
         branches-ignore:
-            - master
+            - main
         paths:
             - 'backend/sample/micronaut/**'
 
