feat: add Android kapt multi module support
Signed-off-by: Paulo Cesar Meurer <paulo.meurer@zup.com.br>

--- a/android/processor/build.gradle
+++ b/android/processor/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation project(Dependencies.Modules.commonProcessorSharedCode)
     implementation project(Dependencies.Modules.androidAnnotation)
 
+    implementation Dependencies.GeneralLibraries.kotlinReflect
+
     implementation Dependencies.ProcessorLibraries.incap
     kapt Dependencies.ProcessorLibraries.incapPrcessor
 
