--- a/.github/workflows/license-check.yml
+++ b/.github/workflows/license-check.yml
@@ -6,4 +6,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Check License Lines
-        uses: kt3k/license_checker@v1.0.
+        uses: kt3k/license_checker@v1.0.6
