:wrench: Testing license-check.yml
Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

--- a/.licenserc.json
+++ b/.licenserc.json
@@ -1,3 +1,4 @@
 {
-  "**/*.{yml,yaml,java,kotlin,swift,dark,cpp,c,js,ts,properties,gradle,sh,podspec}": "Copyright 2020 ZUP IT SERVICOS EM TECNOLOGIA E INOVACAO SA"
+  "**/*.{yml,yaml,java,kotlin,swift,dark,cpp,c,js,ts,properties,gradle,sh,podspec}": "Copyright 2020 ZUP IT SERVICOS EM TECNOLOGIA E INOVACAO SA",
+  "**/*.{yml,yaml,java,kotlin,swift,dark,cpp,c,js,ts,properties,gradle,sh,podspec}": "Copyright 2021 ZUP IT SERVICOS EM TECNOLOGIA E INOVACAO SA"
 }
