--- a/.licenserc.json
+++ b/.licenserc.json
@@ -1,8 +1,5 @@
-[
-  {
-    "**/*.{yml,yaml,java,kotlin,swift,dart,cpp,c,js,ts,properties,gradle,sh,podspec}": "Copyright 2020 ZUP IT SERVICOS EM TECNOLOGIA E INOVACAO SA"
-  },
-  {
-    "**/*.{yml,yaml,java,kotlin,swift,dart,cpp,c,js,ts,properties,gradle,sh,podspec}": "Copyright 2021 ZUP IT SERVICOS EM TECNOLOGIA E INOVACAO SA"
-  }
-]
+{
+    "**/*.{yml,yaml,java,kotlin,swift,dart,cpp,c,js,ts,properties,gradle,sh,podspec}": ["ZUP IT SERVICOS EM TECNOLOGIA E INOVACAO SA",
+      "Licensed under the Apache License, Version 2.0"
+      ]
+}
