--- a/flutter/beagle/pubspec.yaml
+++ b/flutter/beagle/pubspec.yaml
@@ -1,7 +1,7 @@
 name: beagle
-description: Beagle is an open source framework for cross-platform development using the concept of Server-Driven UI.
-version: 0.9.0-alpha
-homepage: https://usebeagle.io/
+description: Beagle is an open source framework for multiplatform development using the concept of Server-Driven UI.
+version: 0.9.1-alpha
+homepage: https://github.com/ZupIT/beagle/tree/master/flutter/beagle
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -14,7 +14,7 @@ dependencies:
   get_it: ^7.1.3
   http: ^0.13.3
   url_launcher: ^6.0.6
-  yoga_engine: ^0.0.1
+  yoga_engine: ^0.0.2
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +27,8 @@ flutter:
     platforms:
       android:
         package: br.com.zup.beagle.beagle
+        pluginClass: BeaglePlugin
+      ios:
         pluginClass: BeaglePlugin
 
   assets:
