refactor: sample description
Signed-off-by: Matheus Ribeiro <matheus.ribeiro@zup.com.br>

--- a/flutter/sample/pubspec.yaml
+++ b/flutter/sample/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sample
-description: A new Flutter application.
+description: A sample Beagle Flutter application.
 version: 1.0.0
 publish_to: 'none'
 
