--- a/.licenserc.json
+++ b/.licenserc.json
@@ -13,7 +13,9 @@
       "limitations under the License."
       ],
   "ignore": [
+    ".github",
     "\\.gradle",
+    "/.gradle",
     "\\.idea",
     ".idea",
     "local.properties"
