--- a/.github/workflows/license-check.yml
+++ b/.github/workflows/license-check.yml
@@ -1,7 +1,7 @@
 name: Check License Lines
 on: [pull_request]
 jobs:
-  check-license-lines:
+  license-header-check:
     name: License Header Check
     runs-on: ubuntu-latest
     steps:
