:sparkles: ADds license on files
Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

--- a/.licenserc.json
+++ b/.licenserc.json
@@ -18,6 +18,10 @@
     "/.gradle",
     "\\.idea",
     ".idea",
-    "local.properties"
+    "\\build",
+    "/build",
+    "local.properties",
+    "flutter\\beagle\\assets\\js\\beagle.js",
+    "flutter/beagle/assets/js/beagle.js"
   ]
 }
