--- a/.github/workflows/license-check.yml
+++ b/.github/workflows/license-check.yml
@@ -6,5 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: "1.12.1"
       - name: Check License Lines
-        uses: kt3k/license_checker@v1.0.6
+        run: ./license-check
