:sparkles: Adds configuration for checking license on fastlane
Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

--- a/.github/workflows/license-check.yml
+++ b/.github/workflows/license-check.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           deno-version: "1.12.1"
       - name: Check License Lines
-        run: bundle exec fastlane check_license_header
+        run: bash fastlane/check-license.sh $(pwd)
