--- a/android/processor/build.gradle
+++ b/android/processor/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation project(Dependencies.Modules.commonProcessorSharedCode)
     implementation project(Dependencies.Modules.androidAnnotation)
 
+    implementation Dependencies.GeneralLibraries.kotlinReflect
+
     implementation Dependencies.ProcessorLibraries.incap
     kapt Dependencies.ProcessorLibraries.incapPrcessor
 
@@ -47,6 +49,7 @@ dependencies {
     testImplementation Dependencies.TestLibraries.kotlinCompileTesting
     testImplementation Dependencies.TestLibraries.junitApi
     testImplementation Dependencies.TestLibraries.junitEngine
+    testImplementation Dependencies.TestLibraries.mockk
 }
 
 apply from: new File('./../../maven-publish.gradle')
