--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 CODEOWNERS
-*         @dantes-git @tarcisiogc @tuliopereirazup @hernandazevedozup @matheusribeirozup @uziasferreirazup @paulomeurerzup @carlossteinzup @tiagoperes @arthurbleilzup @jamessonpenhazup @tayronemachadozup
+*         @dantes-git @tarcisiogc @hernandazevedozup @matheusribeirozup @uziasferreirazup @paulomeurerzup @carlossteinzup @tiagoperes @arthurbleilzup @jamessonpenhazup @tayronemachadozup
