--- a/.github/workflows/license-check.yml
+++ b/.github/workflows/license-check.yml
@@ -2,7 +2,7 @@ name: Check License Lines
 on: [pull_request]
 jobs:
   license-header-check:
-    name: License Header Check
+    name: PR Check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
