--- a/.github/workflows/release-kdocs.yml
+++ b/.github/workflows/release-kdocs.yml
@@ -50,14 +50,14 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ env.BEAGLE_DOCS_AWS_AWS_DOCS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ env.BEAGLE_DOCS_AWS_AWS_DOCS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: sa-east-1
 
       - name: S3 upload
         if: contains(github.ref, 'tags')
-        run: aws s3 sync --acl public-read --follow-symlinks fastlane/kdocs/public s3://${{ env.BEAGLE_DOCS_AWS_AWS_DOCS_S3_BUCKET }}/ --delete
+        run: aws s3 sync --acl public-read --follow-symlinks fastlane/kdocs/public s3://${{ env.BEAGLE_DOCS_AWS_AWS_DOCS_REFERENCE_S3_BUCKET }}/ --delete
 
       - name: S3 BETA upload
         if: ${{ github.ref == 'refs/heads/main' }}
-        run: aws s3 sync --acl public-read --follow-symlinks fastlane/kdocs/public s3://${{ env.BEAGLE_DOCS_AWS_AWS_DOCS_BETA_BUCKET }}/ --delete
+        run: aws s3 sync --acl public-read --follow-symlinks fastlane/kdocs/public s3://${{ env.BEAGLE_DOCS_AWS_AWS_DOCS_REFERENCE_BETA_BUCKET }}/ --delete
