--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
               env:
                 REPO_TOKEN: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_TOKEN }}
                 NAME_REPO_TOKEN: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_USER }}
+                SONATYPE_NEXUS_USERNAME: ${{ secrets.BEAGLE_CORE_ARTIFACT_SONATYPE_NEXUS_USERNAME }}
+                SONATYPE_NEXUS_PASSWORD: ${{ secrets.BEAGLE_CORE_ARTIFACT_SONATYPE_NEXUS_PASSWORD }}
                 ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ env.BEAGLE_CORE_ARTIFACT_SONATYPE_NEXUS_USERNAME }}
                 ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ env.BEAGLE_CORE_ARTIFACT_SONATYPE_NEXUS_PASSWORD }}
                 GPG_KEY_CONTENTS: ${{ env.BEAGLE_CORE_ARTIFACT_GPG_KEY_CONTENTS }}
