chore: adjust workflow (#1756)
* adjust workflowxy

Signed-off-by: uziasferreirazup <uzias.ferreira@zup.com.br>

* adjust

Signed-off-by: uziasferreirazup <uzias.ferreira@zup.com.br>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,23 +10,31 @@ jobs:
         runs-on: macos-latest
         steps:
             - uses: actions/checkout@v2.1.0
+            - name: Read secrets from AWS Secrets Manager into environment variables
+              uses: abhilash1in/aws-secrets-manager-action@v1.0.1
               with:
-                  fetch-depth: '0'
-                  ref: 'main'
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws-region: us-east-1
+                secrets: |
+                  beagle/core/*
+                parse-json: true
             - name: Install Fastlane
               run: bundle install
             - name: Deploy new version
               env:
-                REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
-                NAME_REPO_TOKEN: ${{ secrets.NAME_REPO_TOKEN }}
-                SONATYPE_NEXUS_USERNAME: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
-                SONATYPE_NEXUS_PASSWORD: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
-                GPG_KEY_CONTENTS: ${{ secrets.GPG_KEY_CONTENTS }}
-                ORG_GRADLE_PROJECT_SIGNINGKEYID: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEYID }}
-                ORG_GRADLE_PROJECT_SIGNINGPASSWORD: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
-                GITHUB_USER: ${{ secrets.NAME_REPO_TOKEN }}
-                GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
-                COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
+                REPO_TOKEN: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_TOKEN }}
+                NAME_REPO_TOKEN: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_USER }}
+                SONATYPE_NEXUS_USERNAME: ${{ secrets.BEAGLE_CORE_ARTIFACT_SONATYPE_NEXUS_USERNAME }}
+                SONATYPE_NEXUS_PASSWORD: ${{ secrets.BEAGLE_CORE_ARTIFACT_SONATYPE_NEXUS_PASSWORD }}
+                ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ env.BEAGLE_CORE_ARTIFACT_SONATYPE_NEXUS_USERNAME }}
+                ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ env.BEAGLE_CORE_ARTIFACT_SONATYPE_NEXUS_PASSWORD }}
+                GPG_KEY_CONTENTS: ${{ env.BEAGLE_CORE_ARTIFACT_GPG_KEY_CONTENTS }}
+                ORG_GRADLE_PROJECT_SIGNINGKEYID: ${{ env.BEAGLE_CORE_ARTIFACT_ORG_GRADLE_PROJECT_SIGNINGKEYID }}
+                ORG_GRADLE_PROJECT_SIGNINGPASSWORD: ${{ env.BEAGLE_CORE_ARTIFACT_ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
+                GITHUB_USER: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_USER }}
+                GITHUB_TOKEN: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_TOKEN }}
+                COCOAPODS_TRUNK_TOKEN: ${{ env.BEAGLE_CORE_ARTIFACT_COCOAPODS_TRUNK_TOKEN }}
                 TAG_NAME: ${{ github.REF }}
                 REPO: ${{ github.repository }}
                 COMMITISH: ${{ github.after }}
