--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 CODEOWNERS
-*         @dantes-git @tarcisiogc @hernandazevedozup @matheusribeirozup @uziasferreirazup @paulomeurerzup @carlossteinzup @tiagoperes @arthurbleilzup @jamessonpenhazup @tayronemachadozup @joaoabreuzup @igorgiumellizup 
+*         @dantes-git @tarcisiogc @hernandazevedozup @matheusribeirozup @uziasferreirazup @paulomeurerzup @carlossteinzup @tiagoperes @arthurbleilzup @jamessonpenhazup @tayronemachadozup @joaoabreuzup @igorgiumellizup @hectorcustodiozup @lucasfonsecazup 
