--- a/.github/workflows/license-check.yml
+++ b/.github/workflows/license-check.yml
@@ -1,13 +1,37 @@
-name: Check License Lines
-on: [pull_request]
+#
+  # Copyright 2020, 2021 ZUP IT SERVICOS EM TECNOLOGIA E INOVACAO SA
+  #
+  # Licensed under the Apache License, Version 2.0 (the "License");
+  # you may not use this file except in compliance with the License.
+  # You may obtain a copy of the License at
+  #
+  #  http://www.apache.org/licenses/LICENSE-2.0
+  #
+  # Unless required by applicable law or agreed to in writing, software
+  # distributed under the License is distributed on an "AS IS" BASIS,
+  # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  # See the License for the specific language governing permissions and
+  # limitations under the License.
+#
+
+name: Header license check
+
+on:
+  pull_request:
+    branches: [ main ]
+
+  workflow_dispatch:
+
 jobs:
-  license-header-check:
+  build:
     name: PR Check
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
-      - uses: denoland/setup-deno@v1
+      - name: Check License and license year on Pull Requests
+        uses: ZupIT/header-license-checker@37c8ae54d54581f1bef0bdf1efefaaf854bda857
         with:
-          deno-version: "1.12.1"
-      - name: Check License Lines
-        run: bash scripts/check-license.sh $(pwd)
+          token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          FORCE_COLOR: 3 
