Reverts workflows names
Signed-off-by: Hector Custódio <hector.custodio@zup.com.br>

--- a/.github/workflows/dco-check.yml
+++ b/.github/workflows/dco-check.yml
@@ -21,7 +21,7 @@ on:
     branches: [main]
 
 jobs:
-  dco-gpg-validator:
+  check:
     runs-on: ubuntu-latest
     steps:
       - uses: ZupIT/zup-dco-validator@3835528a8d571e90fa9f0f93effccd6cbe6182c6 #v1.0
