--- a/.github/workflows/dco-check.yml
+++ b/.github/workflows/dco-check.yml
@@ -21,10 +21,10 @@ on:
     branches: [main]
 
 jobs:
-  check:
+  dco-gpg-validator:
     runs-on: ubuntu-latest
     steps:
-      - uses: ZupIT/zup-dco-validator@3835528a8d571e90fa9f0f93effccd6cbe6182c6 #v1.0
+      - uses: ZupIT/zup-dco-validator@3835528a8d571e90fa9f0f93effccd6cbe6182c6 #v1.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_GPG: false
