--- a/.github/workflows/horusec_pr.yml
+++ b/.github/workflows/horusec_pr.yml
@@ -43,6 +43,6 @@ jobs:
 
       - name: Running Horusec
         run: |
-          echo "Repository Owner is: $REPOSITORY_OWNER"
+          echo "Repository Owner is: ${{env.REPOSITORY_OWNER}}"
           curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest-rc 
-          horusec start -p . -e=$(if [ "$REPOSITORY_OWNER" == "ZupIT/horusec" ]; then echo "true"; else echo "false"; fi) -u "https://api-horusec.zup.com.br" -G true -n "${GITHUB_REPOSITORY}_${GITHUB_REF##*/} -a "secrets.HORUSEC_TOKEN"
+          horusec start -p . -e=$(if [ "${{env.REPOSITORY_OWNER}}" == "ZupIT/horusec" ]; then echo "true"; else echo "false"; fi) -u "https://api-horusec.zup.com.br" -G true -n "${GITHUB_REPOSITORY}_${GITHUB_REF##*/} -a "secrets.HORUSEC_TOKEN"
