--- a/.github/workflows/horusec_pr.yml
+++ b/.github/workflows/horusec_pr.yml
@@ -35,8 +35,12 @@ jobs:
 
       - name: Running Horusec
         env:
-           REPOSITORY_OWNER: ${{ github.event.pull_request.head.repo.full_name }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          HORUSEC_CLI_REPOSITORY_AUTHORIZATION: ${{secrets.HORUSEC_TOKEN}},
+          HORUSEC_CLI_HORUSEC_API_URI: "https://api-horusec.zup.com.br"
+          HORUSEC_CLI_REPOSITORY_NAME: "${GITHUB_REPOSITORY}_${GITHUB_REF##*/}"
+          REPOSITORY_OWNER: ${{ github.event.pull_request.head.repo.full_name }}
         run: |
           echo "Repository Owner is: ${{env.REPOSITORY_OWNER}}"
           curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest-rc 
-          horusec start -p . -e=$(if [ "${{env.REPOSITORY_OWNER}}" == "ZupIT/beagle" ]; then echo "true"; else echo "false"; fi) -u "https://api-horusec.zup.com.br" -G true -n "${GITHUB_REPOSITORY}_${GITHUB_REF##*/} -a="${{secrets.HORUSEC_TOKEN}}"
+          horusec start -p . -e=$(if [ "${{env.REPOSITORY_OWNER}}" == "ZupIT/beagle" ]; then echo "true"; else echo "false"; fi) -G true
