--- a/.github/workflows/horusec_pr.yml
+++ b/.github/workflows/horusec_pr.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Running Horusec
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          HORUSEC_CLI_REPOSITORY_AUTHORIZATION: ${{secrets.HORUSEC_TOKEN}},
+          HORUSEC_CLI_REPOSITORY_AUTHORIZATION: ${{secrets.HORUSEC_TOKEN}}
           HORUSEC_CLI_HORUSEC_API_URI: "https://api-horusec.zup.com.br"
           HORUSEC_CLI_REPOSITORY_NAME: "${GITHUB_REPOSITORY}_${GITHUB_REF##*/}"
           REPOSITORY_OWNER: ${{ github.event.pull_request.head.repo.full_name }}
