Updates header config file to skip md extension
Signed-off-by: Hector Custódio <hector.custodio@zup.com.br>

--- a/config.json
+++ b/config.json
@@ -16,19 +16,19 @@
     "config.json",
     ".github",
     ".git",
-    ".json",
-    ".jpg",
-    ".png",
-    ".pdf",
+    "**/*.json",
+    "**/*.jpg",
+    "**/*.png",
+    "**/*.pdf",
     ".resolved",
-    ".jar",
-    ".md",
-    ".MD",
-    ".txt",
+    ".**/*jar",
+    "**/*.md",
+    "**/*.MD",
+    "**/*.txt",
     "gradlew.bat",
     ".editorconfig",
     ".factories",
-    ".lock",
+    "**/*.lock",
     ".metadata",
     ".gitignore",
     ".gitkeep",
